# brainsprite

./: .buildinfo  .codacy.yml  .eslintrc.js  .gitignore  .gitmodules  .npmignore  .pre-commit-config.yaml  APIJS.html  APIPY.html  CLAUDE.md  CONTRIBUTING.html  CONTRIBUTING.md  INSTALL.html  LICENSE  MANIFEST.in  Makefile  QUICKSTART.html  README.md  _coverpage.md  _sidebar.md  brainsprite.js  brainsprite.min.js  build.js  circle.yml  genindex.html  index.html  index.js  jest.config.js  objects.inv  package.json  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  test-env-check.js  tox.ini  update  (+2 more)
.circleci/: config.yml
.github/: codespell_ignore_words.txt
.github/workflows/: doc.yml  pre-commit.yml  test.yml
_downloads/3d168b9c1a76c4ed3bdcc01988ea556d/: plot_stat_map.py
_downloads/ab872452158c5b56ddec7e74cd2ee127/: plot_stat_map.ipynb
_downloads/f1d57f0dbfb701b7d508a3f82fe13826/: plot_anat.ipynb
_sources/: APIPY.rst.txt  CONTRIBUTING.md.txt  INSTALL.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  plot_stat_map.rst.txt  sg_execution_times.rst.txt
assets/: brainsprite.js  style_website.css
auto_examples/: index.html  plot_stat_map.html  sg_execution_times.html
brainsprite/: README.md  __init__.py  brainsprite.py  brainsprite_widget.py  image_preprocess.py  load_img.py  setup.py  sprite_assets.py
brainsprite/assets/html/: viewer_template.html
brainsprite/assets/js/: brainsprite.min.js  brainsprite_template.js
brainsprite/data/js/: brainsprite.min.js
brainsprite/tests/: test_brainsprite.py
converters/: __init__.py  brainsprite.py
docker/: Dockerfile
docs/: Makefile  requirements.txt  update_docs.sh
docs/source/: APIJS.rst  APIPY.rst  CONTRIBUTING.md  INSTALL.rst  OVERVIEW.rst  QUICKSTART.md  conf.py  index.rst
docs/source/_static/: brainsprite.js  demo.html  plot_anat_html_template.html
docs/source/_static/css/: custom.css
examples/: README.rst  example_basic.html  example_click.html  example_colormap.html  example_full.html  example_overlay.html  example_slice_coordinates.html  example_slice_numbers.html  example_value.html  example_white.html  plot_4d.py  plot_anat.html  plot_anat.py  plot_fmri.py  plot_registration.py  plot_stat_map.html  plot_stat_map.py  viewer_4d_template.html
js/: package.json  webpack.config.js
js/src/: brainsprite-widget.js  brainsprite.js  extension.js  widget.js
lib/: brainsprite-widget.js  embed.js
src/: brainsprite.js
src/brainsprite/: __init__.py  _version.py  brainsprite.py  viewer.py
src/brainsprite/data/html/: brainsprite_template.html  brainsprite_template_base64.html  viewer_4d.html  viewer_registration.html
src/brainsprite/data/js/: brainsprite.js  brainsprite.min.js  brainsprite_template.js
tests/: .gitignore  casper_test_all.js  casper_test_load_no_error.js  demo.html  example_basic.html  example_click.html  example_colormap.html  example_full.html  example_overlay.html  example_slice_coordinates.html  example_slice_numbers.html  example_value.html  example_white.html  jest_environment.js  plot_anat.html  plot_anat.py  plot_anat_html.py  plot_anat_html_test.js  plot_anat_test.js  plot_stat_map.html  plot_stat_map.py  plot_stat_map_test.js  setup.js  teardown.js  template.js  test_all.sh  test_basic.js  test_plot_anat.js
tests/js/: .puppeteerEndpoint  jest_environment.js  plot_anat.test.js  plot_stat_map.html  plot_stat_map.test.js  setup.js  template.js
tests/python/: test_brainsprite.py
tests/python/tests/: test_brainsprite.py
tmp/: puppeteerEndpoint
